--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,7 @@
     </ion-toolbar>
   </ion-header>
 
+  <div (click)="getOtherPage()">MOVE TO TAB4</div>
+
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
